Fixed some z-index nonsense in hero (blocked nav).

--- a/wp-content/themes/machineguntheme/assets/css/sass/_development.scss
+++ b/wp-content/themes/machineguntheme/assets/css/sass/_development.scss
@@ -10,5 +10,22 @@
 .hero {
 	width: 100%;
 	height: 90%;
+	height: calc(100% - 2em);
 	background-color: $blue;
 }
+
+	.hero-overlay {
+		width: 100%;
+		height: 100%;
+		position: relative;
+	}
+
+	.hero-content-bg {
+		width: 64%;
+		min-height: 50%;
+		min-height: calc(50% + 2em);
+		position: absolute;
+		left: 0;
+		bottom: -2em;
+		background-color: pink;
+	}
